--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -1,14 +1,16 @@
 name: Schedule notification
   
-on:
-  schedule:
-    - cron: '0 10-18 * * *'
+# on:
+#   schedule:
+#     - cron: '0 10-18 * * *'
+      
+on: workflow_dispatch
 
 jobs:
   notify:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Call notification API 
+      - name: Check iPhone status & notify 
         run: |
           curl -X GET "https://whatyoubendoing-iphone-plz.deno.dev?sms=1"
